2010-07-31  Quentin Mathe <quentin.mathe@gmail.com>

	* Tools/AGSParser.h:
	* Tools/AGSParser.m:
	(-canWrapWithParagraphMarkup:, -generateParagraphMarkupForString:):
	Tweaked paragraph generation to ignore \n\n sequences inside <example> 
	markup.
	(-parseDeclaration): Added enum documentation parsing.

2010-07-26  Nicola Pero  <nicola.pero@meta-innovation.com>

	* Documentation/GNUmakefile (REF_DOC_INSTALL_DIR): Use
	GNUSTEP_DOC, not GNUSTEP_DOCUMENTATION, which has been deprecated
	for over 3 years.
	* Documentation/Makefile.postamble (after-uninstall): Rewritten to
	be more accurate.

2010-07-26  Nicola Pero  <nicola.pero@meta-innovation.com>

	* Source/NSBundle.m ([+_addFrameworkFromClass:]): Added support
	for class lists of frameworks with a relative path.  If the
	framework path is relative, convert it to absolute by prepending
	the launch directory to it, since that must be how the dynamic
	linker located the framework to load it.

2010-07-22  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSString.m: Change to use ([-isKindOfClass:]) in a couple
	of places. Revert David's last change entirely ... in the svn log
	he said: 'Do the same stupid thing Apple does (return NO), rather
	than the stupid thing we were doing (segfault), when passing a proxy
	as the argument to [NSString isEqualToString:]', but this comment
	seems to be almost entirely wrong as:
	1. we don't segfault (on my machines ... perhaps we do on other
	systems but if so we should find the underlying bug and fix it)
	2. Apple (OSX Snow Leopard) doesn't behave that way ... the testsuite
	(NSProxy test00.m) shows it behaving the saem way as GNUstep.
	3. The change also broke string subclasses (bug #30511)

2010-07-19  Niels Grewe <niels.grewe@halbordnung.de>

	* Source/ObjectiveC2/runtime.c:
	* Source/ObjectiveC2/runtime.h:
	Add sel_getType_np(), which just calls sel_get_type().

2010-07-19  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSPathUtilities.m: User domain handling improvements.