@@ -1,3 +1,9 @@
+2010-08-06 Doug Simons <doug.simons@testplant.com>
+
+	* Source/NSCalendarDate.m: Fix to AM/PM parsing to recognize
+	12 AM as midnight, not noon. When format calls for a time zone,
+	return nil if no time zone is given (the same as Cocoa).
+
 2010-07-31  Quentin Mathe <quentin.mathe@gmail.com>
 
 	* Tools/AGSParser.h:
